@@ -9,6 +9,10 @@ PHP                                                                        NEWS
   (Paul Hudson, Derick)
 - Fixed bug with raw_post_data not getting set (Brian)
 - Fixed a file-descriptor leak with phpinfo() and other 'special' URLs (Zeev)
+- Fixed bug #29844 (SOAP doesn't return the result of a valid SOAP request).
+  (Dmitry)
+- Fixed bug #29830 (SoapServer::setClass() should not export non-public
+  methods). (Dmitry)
 - Fixed bug #29821 (Fixed possible crashes in convert_uudecode() on invalid
   data). (Ilia)
 - Fixed bug #29808 (array_count_values() breaks with numeric strings). (Ilia)
